# meetup-map

./: .env.example  .gitignore  CNAME  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  fly.toml  kafka_client.py  pyproject.toml  settings.py  update_ai_signals_board.sh
.github/workflows/: docker.yml  render-map.yaml  render-map.yml  scrape.yaml
community/: discover_luma.py  discover_meetup.py  discovered_luma.txt  discovered_meetup.txt  groups.txt
community/community/: discovered_meetup.txt
docs/: CNAME  cities.json  index.html  stats.json  style.css
docs/favicon_io/: site.webmanifest
infra/grafana/provisioning/dashboards/: dashboards.yml  meetup-dashboard.json  pipeline-health-dashboard.json  worker-health-dashboard.json
infra/postgres/: schema.sql
infra/terraform/: .terraform.lock.hcl  extract-config.sh  kafka.tf  main.tf  outputs.tf  postgres.tf  terraform.tfvars.example  variables.tf
map/: index_template.html  render.py
seed/: networks.py  producer.py
shared/: geocoding.py  kafka_client.py  models.py  settings.py
sink/: consumer.py
worker/: scraper.py
