[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meetupmap"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "structlog>=24.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
meetupmap-seed   = "seed.producer:main"
meetupmap-worker = "worker.scraper:main"
meetupmap-sink   = "sink.consumer:main"

[tool.setuptools.packages.find]
include = ["seed*", "worker*", "sink*", "shared*", "map*"]

[tool.ruff]
line-length = 100
